--- a/index.html
+++ b/index.html
@@ -1,235 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gutter Replacement, Cleaning & Clearing in Askern DN6 | Home Repairs</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<!-- SEO Meta Tags -->
-<meta name="description" content="Professional gutter replacement, cleaning, and clearing services in Askern DN6 and surrounding villages including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough. Protect your home from water damage with our expert team.">
-<meta name="keywords" content="Gutter cleaning Askern DN6, Gutter replacement Askern, Downspout clearing Askern, Roof gutter maintenance Askern villages, Residential gutter services DN6, Gutter repair near Askern, Village gutter services Askern">
-<meta name="robots" content="index, follow">
+<title>Gutter Replacement, Cleaning & Clearing in Askern DN6 | Home Repairs 4U</title>
 
-<!-- Open Graph / Social Sharing -->
-<meta property="og:title" content="Gutter Replacement, Cleaning & Clearing in Askern DN6">
-<meta property="og:description" content="Expert gutter services for all villages and towns within a 10-mile radius of Askern DN6 including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://steely1968.github.io/">
-<meta property="og:image" content="https://steely1968.github.io/images/logo.webp">
+<link rel="canonical" href="https://steely1968.github.io/">
 
-<!-- Local Business Schema -->
+<meta name="description"
+content="Professional gutter replacement, gutter cleaning and gutter clearing services in Askern DN6 and surrounding villages within a 10-mile radius. Downpipe unblocking, UPVC installations, soffit and fascia checks, leak repairs and seasonal maintenance. Call 07735 873694." />
+
+<meta http-equiv="Cache-Control" content="max-age=604800, public" />
+<meta property="og:image" content="https://steely1968.github.io/images/logo.webp" />
+
+<style>
+body{
+font-family:Arial, sans-serif;
+margin:0;
+padding:20px;
+background:#f4f4f4;
+color:#222;
+line-height:1.7;
+}
+.container{
+max-width:900px;
+margin:auto;
+background:#fff;
+padding:30px;
+border-radius:6px;
+box-shadow:0 0 12px rgba(0,0,0,.1);
+}
+.logo{
+display:block;
+margin:0 auto 10px auto;
+max-height:90px;
+width:auto;
+}
+h1,h2,h3{color:#2c3e50;}
+h1{text-align:center;}
+ul{margin-left:20px;}
+.call-btn{
+display:inline-block;
+padding:14px 26px;
+background:#27ae60;
+color:#fff;
+text-decoration:none;
+font-size:19px;
+font-weight:bold;
+border-radius:6px;
+}
+.cta{text-align:center;margin:25px 0;}
+</style>
+</head>
+
+<body>
+<div class="container">
+
+<img src="images/logo.webp"
+alt="Home Repairs 4U – Gutter Services in Askern DN6"
+class="logo">
+
+<div class="cta">
+<a class="call-btn"
+href="tel:07735873694"
+aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<h1>Gutter Replacement, Cleaning & Clearing in Askern DN6</h1>
+
+<p>
+Welcome to Home Repairs 4U — your trusted local gutter specialist serving <strong>Askern DN6</strong> and all surrounding villages and towns within a <strong>10-mile radius</strong>. We provide high-quality <strong>gutter replacement, gutter cleaning, gutter clearing, downpipe unblocking, leak repairs, soffit & fascia checks</strong> and complete roofline maintenance at fair and honest prices.
+</p>
+
+<p>
+As a local Askern-based service, we cover Norton, Campsall, Skellow, Adwick le Street, Carcroft, Woodlands, Owston, Bentley, Brodsworth, Toll Bar, Sprotbrough, Conisbrough, Mexborough, Bessacarr, Wheatley Hills and every location across the DN6 region.
+If you're near Askern, we serve your area — simple as that.
+</p>
+
+<p>
+Gutters protect your home from rainwater damage by directing water safely away from the roofline. When they become blocked, sagging, cracked or overflowing, problems quickly follow: damp walls, mould, rotten fascias, foundation damage and internal leaks.
+Our goal is to prevent those issues before they become expensive. With years of hands-on experience, we provide reliable solutions that keep your guttering working efficiently all year round.
+</p>
+
+<h2>Gutter Replacement – Strong, Long-Lasting & Reliable</h2>
+
+<p>
+If your gutters are split, warped, faded, leaking repeatedly or no longer secure, a replacement system is often the most sensible long-term investment. We install high-quality guttering in several material options:
+</p>
+
+<ul>
+<li><strong>UPVC guttering:</strong> Low-maintenance, affordable and clean looking</li>
+<li><strong>Aluminium gutters:</strong> Lightweight, modern and rust-resistant</li>
+<li><strong>Galvanised steel:</strong> Exceptionally strong and durable</li>
+<li><strong>Copper guttering:</strong> Premium appearance with long lifespan</li>
+</ul>
+
+<p>Every installation includes:</p>
+
+<ul>
+<li>Safe removal and disposal of existing guttering</li>
+<li>New brackets fitted at correct spacing for stability</li>
+<li>Accurate levelling for smooth water flow</li>
+<li>Downpipes properly connected and tested</li>
+<li>Full leak and flow assessment after completion</li>
+</ul>
+
+<p>
+Whether you need a full house system or a single replacement section, we tailor our work to suit your budget and requirements.
+</p>
+
+<h2>Gutter Cleaning – Prevent Overflow & Water Damage</h2>
+
+<p>
+Regular gutter cleaning is essential for any property. Leaves, moss, silt and roof debris naturally build up over time, blocking the flow of rainwater. When water cannot drain, it spills over the sides and soaks into your walls — one of the most common causes of damp.
+</p>
+
+<p>Our cleaning service includes:</p>
+
+<ul>
+<li>Full gutter emptying using the safest method</li>
+<li>Removal of moss, leaves, silt and debris</li>
+<li>Downpipe flushing and blockage removal</li>
+<li>Inspection for loose joints and bracket problems</li>
+<li>Optional before & after photos</li>
+</ul>
+
+<p>
+Most homes benefit from cleaning twice per year: once in spring and once in autumn. Properties near tall trees or with older rooflines may need an additional clean during the year.
+</p>
+
+<h2>Gutter Clearing for Severe Blockages</h2>
+
+<p>
+Sometimes gutters become so clogged that normal cleaning won’t cut it. Heavy moss build-up, compacted debris, plant growth and deeply embedded blockage inside downpipes can create complete water failure.
+</p>
+
+<p>We specialise in difficult clearances:</p>
+
+<ul>
+<li>Thick moss and compacted silt removal</li>
+<li>Vegetation and root extraction</li>
+<li>Downpipe blockage removal</li>
+<li>Unclogging debris trapped in bends and offsets</li>
+<li>Checking for hidden damage behind the blockage</li>
+</ul>
+
+<p>
+If water is spilling heavily over the edges or grass is growing from your guttering, a full clearing service is the right solution.
+</p>
+
+<h2>Why Homeowners Choose Home Repairs 4U</h2>
+
+<ul>
+<li>Local Askern DN6 specialist – fast callouts</li>
+<li>Friendly, honest and reliable service</li>
+<li>Strong reputation and repeat customers</li>
+<li>Clean, tidy and respectful work</li>
+<li>No hidden costs – clear quotes every time</li>
+<li>Safe ladder and roofline access</li>
+<li>Flexible appointments to suit you</li>
+</ul>
+
+<h2>Seasonal Roofline Maintenance</h2>
+
+<ul>
+<li><strong>Spring:</strong> Remove winter moss and debris</li>
+<li><strong>Summer:</strong> Check seals and minor repairs</li>
+<li><strong>Autumn:</strong> Heavy leaf-fall clearing</li>
+<li><strong>Winter:</strong> Reduce ice build-up and overflow risk</li>
+</ul>
+
+<h2>Areas We Cover – 10 Miles Around Askern DN6</h2>
+
+<p>
+We proudly serve: Askern, Norton, Campsall, Skellow, Woodlands, Adwick le Street, Bentley, Carcroft, Owston, Sprotbrough, Brodsworth, Toll Bar, Conisbrough, Mexborough, Bessacarr, Wheatley Hills and all nearby areas.
+</p>
+
+<h2>Frequently Asked Questions</h2>
+
+<h3>How often should gutters be cleaned?</h3>
+<p>Most homes require cleaning twice a year, though houses near trees may need more frequent visits.</p>
+
+<h3>Can you repair leaks during the visit?</h3>
+<p>Yes, small leaks, slipped joints and minor issues can usually be repaired immediately.</p>
+
+<h3>How do I know if my guttering needs replacing?</h3>
+<p>Cracks, sagging, faded plastic, constant leaks and repeated overflow are strong signs.</p>
+
+<h3>Do you offer free quotes?</h3>
+<p>Yes — quoting is completely free with no obligation.</p>
+
+<h3>Do you handle emergency blockages?</h3>
+<p>Yes, urgent overflow problems are prioritised.</p>
+
+<div class="cta">
+<a class="call-btn" href="tel:07735873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</div>
+
+<!-- LocalBusiness Schema + FAQ Schema -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Repairs 4U",
-"image": "https://steely1968.github.io/images/logo.webp",
-"url": "https://steely1968.github.io",
-"telephone": "07735873694",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "Your Street Address",
-"addressLocality": "Askern",
-"postalCode": "DN6",
-"addressCountry": "GB"
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Repairs 4U",
+"image":"https://steely1968.github.io/images/logo.webp",
+"telephone":"07735873694",
+"url":"https://steely1968.github.io/",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"postalCode":"DN6",
+"addressCountry":"UK"
 },
-"areaServed": {
-"@type": "GeoCircle",
-"geoMidpoint": {
-"@type": "GeoCoordinates",
-"latitude": 53.5722,
-"longitude": -1.1470
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{
+"@type":"GeoCoordinates",
+"latitude":53.5722,
+"longitude":-1.1470
 },
-"geoRadius": 16
+"geoRadius":16000
 },
-"priceRange": "££",
-"description": "Professional gutter replacement, cleaning, and clearing services across Askern DN6 and surrounding villages.",
-"sameAs": [
-"https://www.facebook.com/yourprofile",
-"https://www.twitter.com/yourprofile"
+"description":"Gutter replacement, cleaning and clearing services across Askern DN6 and surrounding villages within a 10-mile radius.",
+"openingHoursSpecification":[{
+"@type":"OpeningHoursSpecification",
+"dayOfWeek":[
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
 ],
-"openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
-"currenciesAccepted": "GBP",
-"paymentAccepted": "Cash, Credit Card"
+"opens":"08:00",
+"closes":"18:00"
+}]
 }
 </script>
 
-<!-- FAQ Schema -->
 <script type="application/ld+json">
 {
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
 {
-"@type": "Question",
-"name": "Do you provide gutter services in all villages around Askern DN6?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, we provide gutter replacement, cleaning, and clearing services in Askern DN6 and surrounding villages including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough."
+"@type":"Question",
+"name":"How often should gutters be cleaned?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Most homes are best cleaned twice per year, especially in spring and autumn."
 }
 },
 {
-"@type": "Question",
-"name": "How often should gutters be cleaned in Askern DN6?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "We recommend cleaning gutters at least twice a year: in spring to remove winter debris and in autumn to prevent leaf blockages. More frequent cleaning may be needed if you have large trees nearby."
+"@type":"Question",
+"name":"Can you repair leaks during the visit?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, most small leaks and loose joints can be repaired immediately."
 }
 },
 {
-"@type": "Question",
-"name": "Do you replace damaged gutters or only clean them?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "We provide both services. Our team can clean, clear, repair, or completely replace damaged gutters with high-quality materials including aluminium, UPVC, galvanized steel, and copper."
-}
-},
-{
-"@type": "Question",
-"name": "Do you offer gutter services for both homes and commercial properties?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, we serve residential and commercial properties in Askern DN6 and surrounding areas, offering tailored solutions for each property type."
-}
-},
-{
-"@type": "Question",
-"name": "How can I book gutter cleaning or replacement services?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "You can easily book our services by calling us directly at 07735873694. We also provide free consultations and tailored quotes for your property."
+"@type":"Question",
+"name":"Do you offer free quotes?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, all quotes are completely free and no obligation."
 }
 }
 ]
 }
 </script>
 
-<style>
-body {
-font-family: Arial, sans-serif;
-line-height: 1.6;
-margin: 0;
-padding: 20px;
-background-color: #f4f4f4;
-color: #333;
-}
-.container {
-max-width: 900px;
-margin: auto;
-background: #fff;
-padding: 30px;
-box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-.logo {
-display: block;
-margin: 0 auto 20px auto;
-max-height: 90px;
-width: auto;
-}
-h1 {
-text-align: center;
-color: #2c3e50;
-}
-h2 {
-color: #34495e;
-}
-p {
-margin-bottom: 15px;
-}
-ul {
-margin-bottom: 15px;
-}
-.cta {
-text-align: center;
-margin-top: 30px;
-}
-.cta a {
-display: inline-block;
-padding: 15px 25px;
-background-color: #27ae60;
-color: #fff;
-text-decoration: none;
-font-size: 18px;
-border-radius: 5px;
-}
-.cta a:hover {
-background-color: #2ecc71;
-}
-.faq-section {
-margin-top: 40px;
-}
-.faq-section h2 {
-text-align: center;
-margin-bottom: 20px;
-}
-.faq-section dl dt {
-font-weight: bold;
-margin-top: 15px;
-}
-.faq-section dl dd {
-margin-left: 20px;
-margin-bottom: 15px;
-}
-</style>
-</head>
-<body>
-<div class="container">
-<img src="images/logo.webp" alt="Company Logo" class="logo">
-
-<h1>Gutter Replacement, Cleaning & Clearing in Askern DN6</h1>
-
-<p>Protect your home with professional gutter services across Askern DN6 and surrounding villages, including <strong>Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough</strong>. Maintaining clean and functional gutters is essential to prevent water damage, structural problems, and foundation issues. Our expert team provides comprehensive gutter replacement, cleaning, and clearing services to keep your home safe and dry.</p>
-
-<h2>Gutter Replacement Services</h2>
-<p>Old or damaged gutters can lead to leaks, overflowing water, and serious damage to your home. Our gutter replacement services provide a long-lasting solution. We install and replace gutters in a variety of materials, including aluminium, galvanized steel, UPVC, and copper. Our service covers all towns and villages in the Askern DN6 area.</p>
-
-<h2>Gutter Cleaning Services</h2>
-<p>Regular cleaning is key to preventing blockages, overflow, and damage. We remove leaves, moss, dirt, and debris from gutters and downspouts, ensuring proper water flow. Our service extends to villages such as <strong>Norton, Campsall, Skellow, Woodlands, and Owston</strong>.</p>
-
-<h2>Gutter Clearing Services</h2>
-<p>Severe blockages or damaged gutters require more than routine cleaning. We address tree root intrusion, moss buildup, sagging gutters, slow drainage, and blocked downspouts. Preventative solutions like gutter guards are also provided.</p>
-
-<h2>Why Choose Our Gutter Services?</h2>
-<ul>
-<li><strong>Experience:</strong> Years of expertise in gutter replacement, cleaning, and clearing.</li>
-<li><strong>Safety:</strong> Professional equipment for safe access to all gutters.</li>
-<li><strong>Reliability:</strong> Timely, quality-focused service.</li>
-<li><strong>Comprehensive Solutions:</strong> From minor cleaning to full replacement.</li>
-<li><strong>Affordable Pricing:</strong> Transparent and competitive.</li>
-</ul>
-
-<h2>Year-Round Gutter Maintenance</h2>
-<ul>
-<li>Spring cleaning to remove winter debris</li>
-<li>Summer inspections after storms</li>
-<li>Autumn clearing to prevent leaf buildup</li>
-<li>Winter preparation to avoid ice dams and frozen blockages</li>
-</ul>
-
-<!-- FAQ Section -->
-<div class="faq-section">
-<h2>Frequently Asked Questions</h2>
-<dl>
-<dt>Do you provide gutter services in all villages around Askern DN6?</dt>
-<dd>Yes, we provide gutter replacement, cleaning, and clearing services in Askern DN6 and surrounding villages including Norton, Campsall, Skellow, Woodlands, Owston, Wadworth, Brodsworth, Bessacarr, Adwick le Street, Conisbrough, and Mexborough.</dd>
-
-<dt>How often should gutters be cleaned in Askern DN6?</dt>
-<dd>We recommend cleaning gutters at least twice a year: in spring to remove winter debris and in autumn to prevent leaf blockages. More frequent cleaning may be needed if you have large trees nearby.</dd>
-
-<dt>Do you replace damaged gutters or only clean them?</dt>
-<dd>We provide both services. Our team can clean, clear, repair, or completely replace damaged gutters with high-quality materials including aluminium, UPVC, galvanized steel, and copper.</dd>
-
-<dt>Do you offer gutter services for both homes and commercial properties?</dt>
-<dd>Yes, we serve residential and commercial properties in Askern DN6 and surrounding areas, offering tailored solutions for each property type.</dd>
-
-<dt>How can I book gutter cleaning or replacement services?</dt>
-<dd>You can easily book our services by calling us directly at 07735873694. We also provide free consultations and tailored quotes for your property.</dd>
-</dl>
-</div>
-
-<div class="cta">
-<a href="tel:07735873694">Call Now to Book Your Service</a>
-</div>
-</div>
 </body>
 </html>
